--- a/foxSkied/about.html
+++ b/foxSkied/about.html
@@ -15,32 +15,26 @@
 </head>
 
 <body>
-	<style>body:before{background-image: url("backgroundMontagebad.png");}
-		body,header,header .center a{
-			color: rgba(15,15,15,1.00);
-		}
-		header{
-			filter: drop-shadow(0 0 0.05rem black);
-		}
-		header .right{
-			filter: drop-shadow(0 0 0.75rem rgba(15,15,15,0.40););
-		}
+	<style>body:before{background-image: url("backgroundAboutBad.png");}
 		.sign h1{
-			filter: drop-shadow(0 0 0.05rem black);
+			filter: drop-shadow(0 0 0.5rem black);
 		}
 		.sign p{
-			filter: drop-shadow(0 0 0.05rem black);
-			color: rgba(15,15,15,1.00);
+			text-shadow: 0px 0px 10px white;
+			color: black;
+			font-weight:bold;
 		}
 	</style>
 	
-	<img src="backgroundMontage.jpg" style="width: 100%;height: auto;" class="background"/>
+	<img src="backgroundAbout.jpg" style="width: 100%;height: auto;" class="background"/>
 	<header>
 		<div class="left">SKIEDFOX</div>
 		<div class="center">
-			<a href="index.html">MONTAGE</a>
-			<a href="minecraft.html">MINECRAFT</a>
+			<a href="index.html">HOME</a>
+			<a href="montage.html">MONTAGE</a>
+			<a href="siteWeb.html">VOTRE SITE WEB</a>
 			<a href="gaming.html">GAMING</a>
+			<a href="minecraft.html">MINECRAFT</a>
 			<a href="about.html" class="active">ABOUT ME</a>
 		</div>
 		<div class="right">
