--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-	<style>body:before{background-image: url("backgroundMontageBad.png");}
+	<style>body:before{background-image: url("backgroundHomeBad.png");}</style>
+			<style>body:before{background-image: url("backgroundMontageBad.png");}
 		body,header,header .center a{
 			color: rgba(15,15,15,1.00);
 		}
@@ -25,22 +26,27 @@
 		header .right{
 			filter: drop-shadow(0 0 0.75rem rgba(15,15,15,0.40););
 		}
+		header .left{
+			filter: drop-shadow(0 0 0.35rem white);
+		}
 		.sign h1{
 			filter: drop-shadow(0 0 0.05rem black);
 		}
 		.sign p{
-			filter: drop-shadow(0 0 0.05rem black);
+			filter: drop-shadow(0 0 0.35rem white);
 			color: rgba(15,15,15,1.00);
+			font-weight:bold;
 		}
 	</style>
-	
-	<img src="backgroundMontage.jpg" style="width: 100%;height: auto;" class="background"/>
+	<img src="backgroundHome.jpg" style="width: 100%;height: auto;" class="background"/>
 	<header>
 		<div class="left">SKIEDFOX</div>
 		<div class="center">
-			<a href="index.html" class="active">MONTAGE</a>
-			<a href="minecraft.html">MINECRAFT</a>
+			<a href="index.html" class="active">HOME</a>
+			<a href="montage.html">MONTAGE</a>
+			<a href="siteWeb.html">VOTRE SITE WEB</a>
 			<a href="gaming.html">GAMING</a>
+			<a href="minecraft.html">MINECRAFT</a>
 			<a href="about.html" >ABOUT ME</a>
 		</div>
 		<div class="right">
@@ -49,19 +55,16 @@
 	</header>
 	<div id="home">
 		<div class="sign">
-			 <h1>Montage</h1>
+			 <h1>HOME</h1>
 			<div class="bar"></div>
 			<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
 		 </div>
 	</div>
 	<div id="textHome">
 		<div class="centerDiv">
-			<div class="card"><p>Vidéo simple</p><hr><br><br><br><br><hr><p class="bottom">10 €</p></div>
-			<div class="card"><p>Court métrage</p><hr><br><br><br><br><hr><p class="bottom">30 €</p></div>
-			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
+			
 		</div>
 	</div>
-	<img src="arrow.png" class="arrow rightArrow" onclick="window.location = 'minecraft.html'">
 	<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
 </body>
 </html>
