--- a/foxSkied/minecraft.html
+++ b/foxSkied/minecraft.html
@@ -21,9 +21,11 @@
 	<header>
 		<div class="left">SKIEDFOX</div>
 		<div class="center">
-			<a href="index.html">MONTAGE</a>
-			<a href="minecraft.html" class="active">MINECRAFT</a>
+			<a href="index.html">HOME</a>
+			<a href="montage.html">MONTAGE</a>
+			<a href="siteWeb.html">VOTRE SITE WEB</a>
 			<a href="gaming.html">GAMING</a>
+			<a href="minecraft.html" class="active">MINECRAFT</a>
 			<a href="about.html" >ABOUT ME</a>
 		</div>
 		<div class="right">
@@ -44,8 +46,8 @@
 			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
 		</div>
 	</div>
-	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = 'index.html'">
-	<img src="arrow.png" class="arrow rightArrow"  onclick="window.location = 'gaming.html'">
+	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = 'gaming.html'">
+	<img src="arrow.png" class="arrow rightArrow"  onclick="window.location = 'about.html'">
 	<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
 </body>
 </html>
