--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<style>body:before{background-image: url("backgroundHomeBad.png");}</style>
-			<style>body:before{background-image: url("backgroundMontageBad.png");}
+			<style>body:before{background-image: url("backgroundHomeBad.png");}
 		body,header,header .center a{
 			color: rgba(15,15,15,1.00);
 		}
