--- a/foxSkied/siteWeb.html
+++ b/foxSkied/siteWeb.html
@@ -53,14 +53,17 @@
 		<div class="sign" style="width: 70%;">
 			 <h1>Création de site web</h1>
 			<div class="bar"></div>
-			<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
+			<p>Un portFolio ? Un forum ? Un réseau social ? Une application Mobile ? Tout est possible !</p>
 		 </div>
 	</div>
 	<div id="textHome">
-		<div class="centerDiv">
-			<div class="card"><p>Vidéo simple</p><hr><br><br><br><br><hr><p class="bottom">10 €</p></div>
-			<div class="card"><p>Court métrage</p><hr><br><br><br><br><hr><p class="bottom">30 €</p></div>
-			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
+		<div class="centerDiv" style="display:flex;">
+			<div class="card"><p>Portfolio simple</p><hr><br>Vous voulez une simple présentation de vous ? <br>Avec un design moderne et personnalisable<br>Environ Une journée<br><hr><p class="bottom">10 €</p></div>
+			<div class="card"><p>Site Utilisant du PHP</p><hr><br>Vous souhaitez une liste de membres ? Faire en sorte de pouvoir automatiser vos taches / posts ? <br> Le PHP vas vous permettre avec une Base de donnée de faire ce que vous voulez<br><br><hr><p class="bottom">20 €</p></div>
+			<div class="card"><p>Réseau social / application android / Tâche complexe</p><hr><br>Tout est possible à partir de là !<br><br><br><hr><p class="bottom">Prix sur demande</p></div>
+		</div>
+		<div class="warning">
+			<p>Attention Tout les prix ne comprennent pas l'hébergement ni le domaine du site web, pour plus d'information, veuillez me contacter sur <a style="color: aqua;text-decoration: none;" href="mailto:menardisaac@gmail.com">menardisaac@gmail.com</a> ou sur discord avec <a style="color: aqua;text-decoration: none;" href="https://discord.com">𝕴𝖘𝖆𝖆𝖈 | développeur#0647</a></p>
 		</div>
 	</div>
 		<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = 'montage.html'">
