--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -54,10 +54,10 @@
 		</div>
 	</header>
 	<div id="home">
-		<div class="sign">
-			 <h1>HOME</h1>
+		<div class="sign" style="width: 70%;">
+			 <h1>FOXSKIED PRODUCTION</h1>
 			<div class="bar"></div>
-			<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
+			<p>Du montages de vidéos gaming au montages de films. FOXSKIED vous propose une prestation abordable et très qualitative.</p>
 		 </div>
 	</div>
 	<div id="textHome">
