--- a/foxSkied/gaming.html
+++ b/foxSkied/gaming.html
@@ -19,7 +19,7 @@
 	<header>
 		<div class="left">SKIEDFOX</div>
 		<div class="center">
-			<a href="index.html">HOME</a>
+			<a href="index.html">FOXSKIED</a>
 			<a href="montage.html">MONTAGE</a>
 			<a href="siteWeb.html">VOTRE SITE WEB</a>
 			<a href="gamming.html" class="active">GAMING</a>
