--- a/foxSkied/montage.html
+++ b/foxSkied/montage.html
@@ -36,7 +36,7 @@
 	
 	<img src="backgroundMontage.jpg" style="width: 100%;height: auto;" class="background"/>
 	<header>
-		<div class="left">SKIEDFOX</div>
+		<div class="left">FOXSKIED</div>
 		<div class="center">
 			<a href="index.html">HOME</a>
 			<a href="montage.html" class="active">MONTAGE</a>
