--- a/foxSkied/about.html
+++ b/foxSkied/about.html
@@ -28,7 +28,7 @@
 	
 	<img src="backgroundAbout.jpg" style="width: 100%;height: auto;" class="background"/>
 	<header>
-		<div class="left">SKIEDFOX</div>
+		<div class="left">FOXSKIED</div>
 		<div class="center">
 			<a href="index.html">HOME</a>
 			<a href="montage.html">MONTAGE</a>
