--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -40,7 +40,7 @@
 	</style>
 	<img src="backgroundHome.jpg" style="width: 100%;height: auto;" class="background"/>
 	<header>
-		<div class="left">SKIEDFOX</div>
+		<div class="left">FOXSKIED</div>
 		<div class="center">
 			<a href="index.html" class="active">HOME</a>
 			<a href="montage.html">MONTAGE</a>
