--- a/foxSkied/minecraft.html
+++ b/foxSkied/minecraft.html
@@ -21,7 +21,7 @@
 	<header>
 		<div class="left">SKIEDFOX</div>
 		<div class="center">
-			<a href="index.html">HOME</a>
+			<a href="index.html">FOXSKIED</a>
 			<a href="montage.html">MONTAGE</a>
 			<a href="siteWeb.html">VOTRE SITE WEB</a>
 			<a href="gaming.html">GAMING</a>
