--- a/foxSkied/gaming.html
+++ b/foxSkied/gaming.html
@@ -17,9 +17,9 @@
 <body>
 		<img src="background.jpg"  class="background"/>
 	<header>
-		<div class="left">SKIEDFOX</div>
+		<div class="left">FOXSKIED</div>
 		<div class="center">
-			<a href="index.html">FOXSKIED</a>
+			<a href="index.html">HOME</a>
 			<a href="montage.html">MONTAGE</a>
 			<a href="siteWeb.html">VOTRE SITE WEB</a>
 			<a href="gamming.html" class="active">GAMING</a>
@@ -34,14 +34,12 @@
 		<div class="sign">
 			 <h1>Gaming</h1>
 			<div class="bar"></div>
-			<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
+			<p>Vous êtes un gameur ? cette page est faite pour vous !</p>
 		 </div>
 	</div>
 	<div id="textHome">
 		<div class="centerDiv">
-			<div class="card"><p>Vidéo simple</p><hr><br><br><br><br><hr><p class="bottom">10 €</p></div>
-			<div class="card"><p>Court métrage</p><hr><br><br><br><br><hr><p class="bottom">30 €</p></div>
-			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
+			
 		</div>
 	</div>
 	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = 'siteWeb.html'">
