--- a/newPortFolio/index.html
+++ b/newPortFolio/index.html
@@ -3,10 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>Isaac Menard - Portfolio !</title>
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <meta name="description" content="Bienvenue sur mon portfolio ! Je suis Isaac, un lycéen sapeur pompier et développeur !" />
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 <link rel="stylesheet" media="screen" href="style.css">
@@ -15,16 +14,28 @@
 </head>
 
 <body>
+	<header>
+		<a>HOME</a>
+		<a>Projet</a>
+		<a>compétences</a>
+		<a>contact</a>
+	</header>
 <div class="sign">
 	<div class="bar"></div>
      <h1>Isaac PortFolio</h1>
 	<div class="bar"></div>
  </div>
-	<div class="next" onclick="load('page1')"><i class="fas fa-chevron-right rotate"></i></div>
-<script src="script.js"></script>
-	<div class="next next2" onclick="load('page1')"><i class="fas fa-chevron-right rotate"></i></div>
-<script src="script.js"></script>
-	<div class="next next3" onclick="load('page1')"><i class="fas fa-chevron-right rotate"></i></div>
-<script src="script.js"></script>
+<div class="sign">
+	<div class="bar"></div>
+     <h1>Page 2</h1>
+	<div class="bar"></div>
+ </div>
+<div class="sign">
+	<div class="bar"></div>
+     <h1>Page 3</h1>
+	<div class="bar"></div>
+ </div>
+	<img src="arrow.png" class="next">
 </body>
+	<script src="script.js"></script>
 </html>
