--- a/foxSkied/about.html
+++ b/foxSkied/about.html
@@ -45,14 +45,12 @@
 		<div class="sign">
 			 <h1>Notre ENtreprise</h1>
 			<div class="bar"></div>
-			<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
+			<p>VOus souhaitez plus d'info ?</p>
 		 </div>
 	</div>
 	<div id="textHome">
 		<div class="centerDiv">
-			<div class="card"><p>Vidéo simple</p><hr><br><br><br><br><hr><p class="bottom">10 €</p></div>
-			<div class="card"><p>Court métrage</p><hr><br><br><br><br><hr><p class="bottom">30 €</p></div>
-			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
+			<h1>Allez sur notre discord !</h1>
 		</div>
 	</div>
 	<img src="arrow.png" class="arrow leftArrow" onclick="window.location = 'minecraft.html'">
