--- a/foxSkied/minecraft.html
+++ b/foxSkied/minecraft.html
@@ -19,9 +19,9 @@
 	</style>
 		<img src="backgroundMinecraft.png"  style="width: 100%;height: auto;"  class="background"/>
 	<header>
-		<div class="left">SKIEDFOX</div>
+		<div class="left">FOXSKIED</div>
 		<div class="center">
-			<a href="index.html">FOXSKIED</a>
+			<a href="index.html">HOME</a>
 			<a href="montage.html">MONTAGE</a>
 			<a href="siteWeb.html">VOTRE SITE WEB</a>
 			<a href="gaming.html">GAMING</a>
@@ -36,14 +36,12 @@
 		<div class="sign">
 			 <h1>Minecraft</h1>
 			<div class="bar"></div>
-			<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
+			<p>Bienvenue sur la page de notre serveur minecraft !</p>
 		 </div>
 	</div>
 	<div id="textHome">
 		<div class="centerDiv">
-			<div class="card"><p>Vidéo simple</p><hr><br><br><br><br><hr><p class="bottom">10 €</p></div>
-			<div class="card"><p>Court métrage</p><hr><br><br><br><br><hr><p class="bottom">30 €</p></div>
-			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
+			<h1>IP : machin.craft.fr</h1>
 		</div>
 	</div>
 	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = 'gaming.html'">
