--- a/foxSkied/gaming.html
+++ b/foxSkied/gaming.html
@@ -34,13 +34,69 @@
 		<div class="sign">
 			 <h1>Gaming</h1>
 			<div class="bar"></div>
-			<p>Vous êtes un gameur ? cette page est faite pour vous !</p>
+			<p>Vous êtes YouTubeur et vous n'avez pas le temps de faire le montage de vos vidéos ? Foxskied production est là !</p>
 		 </div>
 	</div>
 	<div id="textHome">
-		<div class="centerDiv">
-			
-		</div>
+		<div class="warningTop">
+    <p> Je suis monteur vidéo professionnel (cf mon CV).
+      Je travaillerai plusieurs heures sur vos rushs afin de vous fournir la vidéo la plus perfectionnée et de satisfaire au mieux votre demande. N'hésitez pas à me contacter afin d'analyser votre projet et de partir sur un éventuel devis.</p>
+  </div>
+  <div class="centerDiv" style="display: flex;">
+    <div class="card" style="width: 20%">
+      <div class="topCard"> Vidéo simple<hr></div>
+      <div class="midCard">
+		  <br>
+		  Du dérushage, des coupures, du mixages son et incrustation d'intro et d'outro.<br>
+		  Durée finale : 10 MIN 
+		  <br>
+      </div>
+      <div class="bottom"><hr>10 €</div>
+    </div>
+    <div class="card" style="width: 20%">
+       <div class="topCard"> Vidéo Complexe<hr></div>
+      <div class="midCard">
+		  <br>
+		  Du dérushage, des coupures, du mixage son, Webcam avec zoom et interaction, incrustation de blague et de zoom et incrustation d'intro et d'outro.<br>
+Durée finale : 10 MIN
+		  <br>
+      </div>
+      <div class="bottom"><hr>17 €</div>
+    </div>
+    <div class="card" style="width: 20%">
+      <div class="topCard"> Montage Dynamique<hr></div>
+      <div class="midCard">
+		  <br>
+		  Le top du top !<br>
+		  Durée finale : 10 MIN 
+		  <br>
+      </div>
+      <div class="bottom"><hr>37 €</div>
+    </div>
+	 <div class="card" style="width: 20%">
+      <div class="topCard"> Clip Dynamique<hr></div>
+      <div class="midCard">
+		  <br>
+		  Pour une vidéo folle !<br>
+		  Durée finale : 4 MIN 
+		  <br>
+      </div>
+      <div class="bottom"><hr>17 €</div>
+    </div>
+    <div class="card" style="width: 20%">
+      <div class="topCard">AUTRE<hr></div>
+      <div class="midCard">
+		  <br>
+		  Les projets sur demande sont disponibles, pour plus d'information contacter le monteur.
+		  <br>
+      </div>
+      <div class="bottom"><hr>Sur demande</div>
+	  </div>
+  </div>
+  <div class="warning">
+    <p>Les facturations seront réglées par PayPal.
+      Vous pouvez contacter le monteur sur Facebook, Discord, Instagram et mail : informations sur la page contact</p>
+  </div>
 	</div>
 	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = 'siteWeb.html'">
 	<img src="arrow.png" class="arrow rightArrow"  onclick="window.location = 'minecraft.html'">
