--- a/foxSkied/gaming.html
+++ b/foxSkied/gaming.html
@@ -20,9 +20,8 @@
 		<div class="left">FOXSKIED</div>
 		<div class="center">
 			<a href="index.html">HOME</a>
-			<a href="montage.html">MONTAGE</a>
+			<a href="montage.html"  class="active">MONTAGE</a>
 			<a href="siteWeb.html">VOTRE SITE WEB</a>
-			<a href="gamming.html" class="active">GAMING</a>
 			<a href="minecraft.html">MINECRAFT</a>
 			<a href="about.html" >ABOUT ME</a>
 		</div>
