--- a/foxSkied/siteWeb.html
+++ b/foxSkied/siteWeb.html
@@ -37,7 +37,7 @@ body:before{background-image: url("backgroundWebsiteBad.png");}
 <img src="backgroundWebsite.jfif" style="width: 100%;height: auto;" class="background"/>
 <header>
   <div class="left">FOXSKIED</div>
-  <div class="center"> <a href="index.html">HOME</a> <a href="montage.html">MONTAGE</a> <a href="siteWeb.html" class="active">VOTRE SITE WEB</a> <a href="gaming.html">GAMING</a> <a href="minecraft.html">MINECRAFT</a> <a href="about.html" >ABOUT ME</a> </div>
+  <div class="center"> <a href="index.html">HOME</a> <a href="montage.html">MONTAGE</a> <a href="siteWeb.html" class="active">VOTRE SITE WEB</a><a href="minecraft.html">MINECRAFT</a> <a href="about.html" >ABOUT ME</a> </div>
   <div class="right"> <img src="insta.png"><img src="youtube.png"><img src="facebook.png"><img src="twitter.png"> </div>
 </header>
 <div id="home">
