--- a/newPortFolio/index.html
+++ b/newPortFolio/index.html
@@ -5,37 +5,25 @@
 <title>Isaac Menard - Portfolio !</title>
 <meta name="description" content="Bienvenue sur mon portfolio ! Je suis Isaac, un lycéen sapeur pompier et développeur !" />
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
-<link rel="stylesheet" media="screen" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+	<link rel="stylesheet" media="screen" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<header>
-		<a>HOME</a>
-		<a>Projet</a>
-		<a>compétences</a>
-		<a>contact</a>
-	</header>
+	<!-- particles.js container -->
+<div id="particles-js"></div>
+
+<!-- scripts -->
+<script src="../particles.min.js"></script>
+<script src="js/app.js"></script>
+
 <div class="sign">
-	<div class="bar"></div>
-     <h1>Isaac PortFolio</h1>
-	<div class="bar"></div>
+     <h1 onclick="changePage();" id="title" class="glitch" data-glitch="Isaac PortFolio">Isaac PortFolio</h1> 
  </div>
-<div class="sign">
-	<div class="bar"></div>
-     <h1>Page 2</h1>
-	<div class="bar"></div>
- </div>
-<div class="sign">
-	<div class="bar"></div>
-     <h1>Page 3</h1>
-	<div class="bar"></div>
- </div>
-	<img src="arrow.png" class="next">
 </body>
 	<script src="script.js"></script>
 </html>
