--- a/foxSkied/montage.html
+++ b/foxSkied/montage.html
@@ -37,12 +37,9 @@ body:before{background-image: url("backgroundMontageBad.png");}
   <div class="right"> <img src="insta.png"><img src="youtube.png"><img src="facebook.png"><img src="twitter.png"> </div>
 </header>
 	<img src="backgroundMontage.jpg" style="width: 100%;height: auto;" class="background"/>
-<div id="right">
-	<div>
-	</div>
-</div>
-<div id="left">
-	<div>
+<div id="lineBack"></div>
+<div id="boxLeft">
+	<div id="boxRight">
 	</div>
 </div>
 	<div class="sign signLeft" onClick="window.location = 'montageRealisation.html'"><h1>MONTAGE Réalisation</h1></div>
