--- a/newPortFolio/index.html
+++ b/newPortFolio/index.html
@@ -21,8 +21,8 @@
 <script src="../particles.min.js"></script>
 <script src="js/app.js"></script>
 
-<div class="sign">
-     <h1 onclick="changePage();" id="title" class="glitch" data-glitch="Isaac PortFolio">Isaac PortFolio</h1> 
+<div class="sign" id="sign1">
+     <h1 onclick="changePage();" id="title" class="glitch" data-glitch="Isaac PortFolio">Isaac PortFolio </h1> 
  </div>
 </body>
 	<script src="script.js"></script>
