--- a/foxSkied/minecraft.html
+++ b/foxSkied/minecraft.html
@@ -39,8 +39,9 @@
 		 </div>
 	</div>
 	<div id="textHome">
-		<div class="centerDiv">
-			<h1>IP : machin.craft.fr</h1>
+		<div class="centerDiv" style="text-align: center;">
+			<h1 style="text-transform: uppercase" >IP : fsp.foxskied.fr</h1>
+			<p class="card" style="padding:  15px;height: auto">Voici un serveur Minecraft maison créer de A à Z par l'équipe Foxskied, Ce serveur est actuellement en Beta il peut héberger plus de 50 joueurs, Nos équipes travaille actuellement sur un launcher gratuit spécialement pour le serveur. Plus d'information sur le serveur Discord Foxskied Production</p>
 		</div>
 	</div>
 	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = 'gaming.html'">
