--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -4,19 +4,22 @@
 <meta charset="utf-8">
 <title>SkiedFox</title>
 <meta name="description" content="Bienvenue sur mon portfolio ! Je suis Isaac, un lycéen sapeur pompier et développeur !" />
-	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 <link rel="stylesheet" media="screen" href="style.css">
-	<script src="script.js"></script>
+<script src="script.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<style>body:before{background-image: url("backgroundHomeBad.png");}</style>
-			<style>body:before{background-image: url("backgroundHomeBad.png");}
+<style>
+body:before{background-image: url("backgroundHomeBad.png");}
+</style>
+<style>
+body:before{background-image: url("backgroundHomeBad.png");}
 		body,header,header .center a{
 			color: rgba(15,15,15,1.00);
 		}
@@ -38,32 +41,50 @@
 			font-weight:bold;
 		}
 	</style>
-	<img src="backgroundHome.jpg" style="width: 100%;height: auto;" class="background"/>
-	<header>
-		<div class="left">FOXSKIED</div>
-		<div class="center">
-			<a href="index.html" class="active">HOME</a>
-			<a href="montage.html">MONTAGE</a>
-			<a href="siteWeb.html">VOTRE SITE WEB</a>
-			<a href="minecraft.html">MINECRAFT</a>
-			<a href="about.html" >ABOUT ME</a>
-		</div>
-		<div class="right">
-			<img src="insta.png"><img src="youtube.png"><img src="facebook.png"><img src="twitter.png">
-		</div>
-	</header>
-	<div id="home">
-		<div class="sign" style="width: 70%;">
-			 <h1>FOXSKIED PRODUCTION</h1>
-			<div class="bar"></div>
-			<p>Du montages de vidéos gaming au montages de films. FOXSKIED vous propose une prestation abordable et très qualitative.</p>
-		 </div>
-	</div>
-	<div id="textHome">
-		<div class="centerDiv">
-			
-		</div>
-	</div>
-	<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
+<img src="backgroundHome.jpg" style="width: 100%;height: auto;" class="background"/>
+<header>
+  <div class="left">FOXSKIED</div>
+  <div class="center"> <a href="index.html" class="active">HOME</a> <a href="montage.html">MONTAGE</a> <a href="siteWeb.html">VOTRE SITE WEB</a> <a href="minecraft.html">MINECRAFT</a> <a href="about.html" >ABOUT ME</a> </div>
+  <div class="right"> <img src="insta.png"><img src="youtube.png"><img src="facebook.png"><img src="twitter.png"> </div>
+</header>
+<div id="home">
+  <div class="sign" style="width: 70%;">
+    <h1>FOXSKIED PRODUCTION</h1>
+    <div class="bar"></div>
+    <p>Du montages de vidéos gaming au montages de films. FOXSKIED vous propose une prestation abordable et très qualitative.</p>
+  </div>
+</div>
+<div id="textHome">
+  <div class="centerDiv" style="display:flex;">
+    <div class="card">
+		<br>
+     <h1>MONTAGE</h1>
+		<br>
+		<hr>
+		<br>
+		  <p>Marre de faire vos montage pour vos vidéos Youtube ? Vous souaitez tourner un clip musical ou un souvenir de mariage ? </p>
+		 <p style="font-size: 25px;cursor: pointer;" onClick="window.location ='montage.html'">CLIQUEZ ICI !</p>
+    </div>
+    <div class="card">
+		<br>
+      <h1 style="text-transform: uppercase;">CRéATION DE SITE WEB </h1>
+		<br>
+		<hr>
+		  <br>
+		  <p>Vous souhaitez un port folio ? un site web marketing ? un forum ? Tout est possible !</p>
+		<p style="font-size: 25px;cursor: pointer;" onClick="window.location ='siteWeb.html'">CLIQUEZ JUSTE ICI !</p>
+    </div>
+	  <div class="card">
+		  <br>
+      <h1>SERVEUR MINECRAFT</h1>
+		  <br>
+		<hr>
+		  <br>
+		  <p>IP DU SERVEUR ici : fsp.foxskied.fr</p>
+		  <p style="font-size: 25px;cursor: pointer;" onClick="window.location ='minecraft.html'">POUR CONTINUER CLIQUEZ ICI !</p>
+    </div>
+  </div>
+</div>
+<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
 </body>
 </html>
