--- a/newPortFolio/index.html
+++ b/newPortFolio/index.html
@@ -24,6 +24,7 @@
 <div class="sign" id="sign1">
      <h1 onclick="changePage();" id="title" class="glitch" data-glitch="Isaac PortFolio">Isaac PortFolio </h1> 
  </div>
+	<footer></footer>
 </body>
 	<script src="script.js"></script>
 </html>
