--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <ul class="portrait">
         <li><a class="page1 active" onclick="page(this)"><i class="fas fa-home"></i></a></li>
         <li><a class="page2" onclick="page(this)"><i class="fas fa-clipboard-list"></i></a></li>
-        <li><a class="page3" onclick="page(this)" href="mesProjets.html"><i class="fas fa-code"></i></a></li>
+        <li><a class="page3" onclick="page(this)"><i class="fas fa-code"></i></a></li>
         <li><a class="page4" onclick="page(this)"><i class="fas fa-fire-extinguisher"></i></a></li>
         <li><a class="page5" onclick="page(this)"><i class="fas fa-quote-right"></i></i></a></li>
     </ul>
 	<ul class="paysage">
         <a class="page1 active" onclick="page(this)"><i class="fas fa-home"></i></a>
         <a class="page2" onclick="page(this)"><i class="fas fa-clipboard-list"></i></a>
-        <a class="page3" onclick="page(this)"  href="mesProjets.html"><i class="fas fa-code"></i></a>
+        <a class="page3" onclick="page(this)"><i class="fas fa-code"></i></a>
         <a class="page4" onclick="page(this)"><i class="fas fa-fire-extinguisher"></i></a>
         <a class="page5" onclick="page(this)"><i class="fas fa-quote-right"></i></i></a>
     </ul>
@@ -57,12 +57,10 @@
                 Mes Projets :
             </h1>
             <p>Etant développeur, j'ai déjà créé différents projets avec l'utilisation de différents languages comme
-                l'Html, le Css, le Php, le Js, le Mysql, le Python ainsi que d'autres languages. <br>Avec jusqu'ici mon
-                plus gros projet, celui de <a target="_blank" href="https://donjonsansdragon.space">Donjon Sans
-                    Dragon</a>. C'est un Rpg où votre but est d'accomplir différentes quêtes dans un monde isométric !
-            </p>
-			<p>Et mon second : <a href="paumePhone.apk"
-   download="paumePhone">Paume Phone ! </a> le concept est simple, vous paumez votre phone, vous allez sur l'applie et vous retrouvez votre phone !</p>
+                l'Html, le Css, le Php, le Js, le Mysql, le Python ainsi que d'autres languages. <br>j'ai créé plusieurs petits jeux comme <a target="_blank" href="https://donjonsansdragon.space">Donjon Sans
+                    Dragon</a> qui est un Rpg où votre but est d'accomplir différentes quêtes dans un monde isométric<br> et j'ai aussi créé <a target="_blank" href="/superMarketCovid19/index.html">Le covid Market</a> ! où vous devez gérer un magasin au beau milieu de notre crise sanitaire !
+            </p><br>
+			      <p>Ainsi que plusieurs applications mobiles disponible sur playstore comme <strong>2iconnect</strong> qui est une application facilitant la communication au sein du lycée</p>
         </div>
     </div>
     <div class="page page4Div">
