--- a/art/index.html
+++ b/art/index.html
@@ -4,15 +4,12 @@
   <meta charset="utf-8">
   <title>Art pla</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+  <script type="text/javascript" src="Assets.json"></script>
+  <script src="scriptV2.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
-<body onclick="startAnim()">
-  <h1 id="title">Welcome</h1>
-  <div id="imgContenaireKid">
-    <img id="perso3" src="imageEx1.png">
-  </div>
-  <div id="imgContenaireFace">
+<body>
+  <div id="imgContenaireFace"  onclick="generateAFace(this)">
 
   </div>
 </body>
