--- a/art/indexV1.html
+++ b/art/indexV1.html
@@ -4,12 +4,15 @@
   <meta charset="utf-8">
   <title>Art pla</title>
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="Assets.json"></script>
-  <script src="scriptV2.js"></script>
+  <script src="script.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
-<body>
-  <div id="imgContenaireFace"  onclick="generateAFace(this)">
+<body onclick="startAnim()">
+  <h1 id="title">Welcome</h1>
+  <div id="imgContenaireKid">
+    <img id="perso3" src="imageEx1.png">
+  </div>
+  <div id="imgContenaireFace">
 
   </div>
 </body>
