--- a/art/index.html
+++ b/art/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Art pla</title>
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="Assets.json"></script>
+  <script type="text/javascript" src="assets.json"></script>
   <script src="scriptV2.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
