--- a/NEW PORTFOLIO/index.html
+++ b/NEW PORTFOLIO/index.html
@@ -51,6 +51,8 @@ canvas {
 	var checkPoint1;
 	var checkPoint2;
 	var checkPoint3;
+	var speedPerso = 500;
+	var jumpPerso = 430;
 	var startAnim = false;
 	var lastPos= "right";
 	
